--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,8 @@
 /* Your CSS Code here. */
 .holder {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Creates 2 equal columns */
-  grid-template-rows: repeat(2, 1fr);    /* Creates 2 equal rows */
-  width: 200px;                          /* Total grid width */
-  height: 200px;                         /* Total grid height */
-}
-
-.item {
-  /* Items will automatically fit into the grid cells */
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr); 
+  width: 200px;                        
+  height: 200px;                        
 }
